fix: the preview placeholder must obey the rules the branch now enforces
Task 6 made 'parts' required of a resolved world style chain, but the
preview's placeholder WorldStyleRE - the one NullDimensionInfo builds
when it cannot resolve the chosen style - still declared none, so
constructing it threw IllegalStateException out of Resolved.require.

That path is live, not theoretical: CitiesTab and CustomizeScreen both
pass a null RegistryAccess deliberately (no biome registry, or no parent
screen), and the placeholder is also what absorbs a stale GUI worldStyle
no longer shipped by any datapack. CityPreview.recompute is driven from
the render pass, and its catch named only IllegalArgumentException, so
the escape took the create-world screen down - exactly what the narrowed
catch exists to prevent.

The placeholder now declares 'parts' with both groups and all twenty-two
components, each an explicitly empty list: the preview samples biomes,
city placement, road classes and rail/highway chunk types, and reads no
part name. It also names itself, so a future missing field says which
asset is at fault instead of 'null'.

Its 'outsidestyle' was the bare name "standard" - unqualified, in
src/main, on the branch whose rule is that unqualified references are a
load error. Not reachable today (only BuildingInfo.createPalette reads
it, and the preview builds no BuildingInfo), but it would have thrown out
of DataTools.fromName the moment anything did. Qualified to
urbex:standard, which the bundled pack ships.

CityPreview's guard now catches IllegalStateException too, and
DataTools.fromName moved inside it - it was above the try, and the
comment's claim that the construction "is the only site in this method
that can throw" was false on that count as well. The comment now
enumerates both throwers. The guard stays wrapped around only the
construction, so a renderer's own math is still never swallowed.

NullDimensionInfoPlaceholderTest covers the placeholder path, which had
exactly 